MAINTAINERCLEANFILES = Makefile.in

nobase_include_HEADERS = cdada.h cdada/list.h             \
				cdada/list_custom_cc.h    \
				cdada/map.h               \
				cdada/map_custom_cc.h     \
				cdada/set.h               \
				cdada/set_custom_cc.h     \
				cdada/utils.h             \
				cdada/__common_internal.h \
				cdada/__list_internal.h   \
				cdada/__map_internal.h    \
				cdada/__set_internal.h
