MAINTAINERCLEANFILES = Makefile.in

nobase_include_HEADERS = cdada.h cdada/version.h	  \
				cdada/bbitmap.h		  \
				cdada/list.h              \
				cdada/list_custom_cc.h    \
				cdada/map.h               \
				cdada/map_custom_cc.h     \
				cdada/queue.h             \
				cdada/queue_custom_cc.h   \
				cdada/set.h               \
				cdada/set_custom_cc.h     \
				cdada/stack.h             \
				cdada/stack_custom_cc.h   \
				cdada/str.h               \
				cdada/utils.h             \
				cdada/__common_internal.h \
				cdada/__list_internal.h   \
				cdada/__map_internal.h    \
				cdada/__queue_internal.h  \
				cdada/__set_internal.h    \
				cdada/__stack_internal.h
