MAINTAINERCLEANFILES = Makefile.in

nobase_include_HEADERS = cdada.h \
				cdada/version.h           \
				cdada/bbitmap.h           \
				cdada/list.h              \
				cdada/list_custom_cc.h    \
				cdada/map.h               \
				cdada/map_custom_cc.h     \
				cdada/queue.h             \
				cdada/queue_custom_cc.h   \
				cdada/set.h               \
				cdada/set_custom_cc.h     \
				cdada/stack.h             \
				cdada/stack_custom_cc.h   \
				cdada/str.h               \
				cdada/utils.h             \
				cdada/__common_internal.h \
				cdada/__list_internal.h   \
				cdada/__map_internal.h    \
				cdada/__queue_internal.h  \
				cdada/__set_internal.h    \
				cdada/__stack_internal.h

##
## External libs (providers)
##

#ETL header files
nobase_include_HEADERS += cdada/ext_libs/etl_config.h \
		cdada/ext_libs/etl/message.h \
		cdada/ext_libs/etl/map.h \
		cdada/ext_libs/etl/unordered_multimap.h \
		cdada/ext_libs/etl/crc16_dectr.h \
		cdada/ext_libs/etl/container.h \
		cdada/ext_libs/etl/state_chart.h \
		cdada/ext_libs/etl/variance.h \
		cdada/ext_libs/etl/message_timer.h \
		cdada/ext_libs/etl/radix.h \
		cdada/ext_libs/etl/fixed_iterator.h \
		cdada/ext_libs/etl/reference_flat_map.h \
		cdada/ext_libs/etl/crc8_itu.h \
		cdada/ext_libs/etl/crc8_maxim.h \
		cdada/ext_libs/etl/covariance.h \
		cdada/ext_libs/etl/crc16_modbus.h \
		cdada/ext_libs/etl/flags.h \
		cdada/ext_libs/etl/log.h \
		cdada/ext_libs/etl/type_traits.h \
		cdada/ext_libs/etl/crc16_t10dif.h \
		cdada/ext_libs/etl/queue_lockable.h \
		cdada/ext_libs/etl/u16string.h \
		cdada/ext_libs/etl/crc8_rohc.h \
		cdada/ext_libs/etl/array_view.h \
		cdada/ext_libs/etl/unordered_map.h \
		cdada/ext_libs/etl/limiter.h \
		cdada/ext_libs/etl/smallest.h \
		cdada/ext_libs/etl/list.h \
		cdada/ext_libs/etl/user_type.h \
		cdada/ext_libs/etl/scheduler.h \
		cdada/ext_libs/etl/callback_timer.h \
		cdada/ext_libs/etl/string_view.h \
		cdada/ext_libs/etl/profiles/gcc_generic.h \
		cdada/ext_libs/etl/profiles/segger_gcc_stlport.h \
		cdada/ext_libs/etl/profiles/msvc_x86_no_stl.h \
		cdada/ext_libs/etl/profiles/gcc_generic_no_stl.h \
		cdada/ext_libs/etl/profiles/cpp14_no_stl.h \
		cdada/ext_libs/etl/profiles/auto.h \
		cdada/ext_libs/etl/profiles/armv6_no_stl.h \
		cdada/ext_libs/etl/profiles/armv6.h \
		cdada/ext_libs/etl/profiles/gcc_windows_x86_no_stl.h \
		cdada/ext_libs/etl/profiles/clang_generic_no_stl.h \
		cdada/ext_libs/etl/profiles/arduino_arm.h \
		cdada/ext_libs/etl/profiles/determine_compiler.h \
		cdada/ext_libs/etl/profiles/cpp11_no_stl.h \
		cdada/ext_libs/etl/profiles/cpp11.h \
		cdada/ext_libs/etl/profiles/cpp03.h \
		cdada/ext_libs/etl/profiles/gcc_linux_x86.h \
		cdada/ext_libs/etl/profiles/armv5_no_stl.h \
		cdada/ext_libs/etl/profiles/armv7.h \
		cdada/ext_libs/etl/profiles/armv5.h \
		cdada/ext_libs/etl/profiles/clang_generic.h \
		cdada/ext_libs/etl/profiles/msvc_x86.h \
		cdada/ext_libs/etl/profiles/determine_compiler_language_support.h \
		cdada/ext_libs/etl/profiles/ticc_no_stl.h \
		cdada/ext_libs/etl/profiles/cpp14.h \
		cdada/ext_libs/etl/profiles/ticc.h \
		cdada/ext_libs/etl/profiles/determine_development_os.h \
		cdada/ext_libs/etl/profiles/cpp17_no_stl.h \
		cdada/ext_libs/etl/profiles/cpp17.h \
		cdada/ext_libs/etl/profiles/armv7_no_stl.h \
		cdada/ext_libs/etl/profiles/cpp03_no_stl.h \
		cdada/ext_libs/etl/profiles/gcc_windows_x86.h \
		cdada/ext_libs/etl/profiles/determine_compiler_version.h \
		cdada/ext_libs/etl/profiles/gcc_linux_x86_no_stl.h \
		cdada/ext_libs/etl/basic_string_stream.h \
		cdada/ext_libs/etl/crc16_dds110.h \
		cdada/ext_libs/etl/imemory_block_allocator.h \
		cdada/ext_libs/etl/binary.h \
		cdada/ext_libs/etl/queue_spsc_isr.h \
		cdada/ext_libs/etl/multiset.h \
		cdada/ext_libs/etl/crc16_tms37157.h \
		cdada/ext_libs/etl/crc8_wcdma.h \
		cdada/ext_libs/etl/crc16_dectx.h \
		cdada/ext_libs/etl/u16string_stream.h \
		cdada/ext_libs/etl/ihash.h \
		cdada/ext_libs/etl/vector.h \
		cdada/ext_libs/etl/intrusive_forward_list.h \
		cdada/ext_libs/etl/wstring_stream.h \
		cdada/ext_libs/etl/timer.h \
		cdada/ext_libs/etl/debounce.h \
		cdada/ext_libs/etl/u16format_spec.h \
		cdada/ext_libs/etl/random.h \
		cdada/ext_libs/etl/fsm.h \
		cdada/ext_libs/etl/task.h \
		cdada/ext_libs/etl/priority_queue.h \
		cdada/ext_libs/etl/span.h \
		cdada/ext_libs/etl/to_u16string.h \
		cdada/ext_libs/etl/algorithm.h \
		cdada/ext_libs/etl/crc16_maxim.h \
		cdada/ext_libs/etl/reference_counted_message.h \
		cdada/ext_libs/etl/version.h \
		cdada/ext_libs/etl/correlation.h \
		cdada/ext_libs/etl/deque.h \
		cdada/ext_libs/etl/intrusive_queue.h \
		cdada/ext_libs/etl/enum_type.h \
		cdada/ext_libs/etl/char_traits.h \
		cdada/ext_libs/etl/crc16_xmodem.h \
		cdada/ext_libs/etl/crc32_posix.h \
		cdada/ext_libs/etl/string.h \
		cdada/ext_libs/etl/set.h \
		cdada/ext_libs/etl/file_error_numbers.h \
		cdada/ext_libs/etl/crc16_buypass.h \
		cdada/ext_libs/etl/placement_new.h \
		cdada/ext_libs/etl/flat_map.h \
		cdada/ext_libs/etl/parameter_type.h \
		cdada/ext_libs/etl/shared_message.h \
		cdada/ext_libs/etl/numeric.h \
		cdada/ext_libs/etl/debug_count.h \
		cdada/ext_libs/etl/flat_multiset.h \
		cdada/ext_libs/etl/compare.h \
		cdada/ext_libs/etl/queue_mpmc_mutex.h \
		cdada/ext_libs/etl/gamma.h \
		cdada/ext_libs/etl/queue.h \
		cdada/ext_libs/etl/integral_limits.h \
		cdada/ext_libs/etl/circular_buffer.h \
		cdada/ext_libs/etl/platform.h \
		cdada/ext_libs/etl/crc16_aug_ccitt.h \
		cdada/ext_libs/etl/crc32_mpeg2.h \
		cdada/ext_libs/etl/mutex.h \
		cdada/ext_libs/etl/doxygen.h \
		cdada/ext_libs/etl/crc16_teledisk.h \
		cdada/ext_libs/etl/queue_spsc_atomic.h \
		cdada/ext_libs/etl/ireference_counted_message_pool.h \
		cdada/ext_libs/etl/instance_count.h \
		cdada/ext_libs/etl/histogram.h \
		cdada/ext_libs/etl/iterator.h \
		cdada/ext_libs/etl/pool.h \
		cdada/ext_libs/etl/crc32.h \
		cdada/ext_libs/etl/murmur3.h \
		cdada/ext_libs/etl/crc8_dvbs2.h \
		cdada/ext_libs/etl/limits.h \
		cdada/ext_libs/etl/to_wstring.h \
		cdada/ext_libs/etl/combinations.h \
		cdada/ext_libs/etl/jenkins.h \
		cdada/ext_libs/etl/ipool.h \
		cdada/ext_libs/etl/wformat_spec.h \
		cdada/ext_libs/etl/to_string.h \
		cdada/ext_libs/etl/callback_service.h \
		cdada/ext_libs/etl/crc16_profibus.h \
		cdada/ext_libs/etl/crc16_kermit.h \
		cdada/ext_libs/etl/crc16_genibus.h \
		cdada/ext_libs/etl/crc8_icode.h \
		cdada/ext_libs/etl/buffer_descriptors.h \
		cdada/ext_libs/etl/crc16_en13757.h \
		cdada/ext_libs/etl/message_types.h \
		cdada/ext_libs/etl/callback.h \
		cdada/ext_libs/etl/successor.h \
		cdada/ext_libs/etl/ratio.h \
		cdada/ext_libs/etl/string_utilities.h \
		cdada/ext_libs/etl/atomic/atomic_clang_sync.h \
		cdada/ext_libs/etl/atomic/atomic_arm.h \
		cdada/ext_libs/etl/atomic/atomic_gcc_sync.h \
		cdada/ext_libs/etl/atomic/atomic_std.h \
		cdada/ext_libs/etl/cstring.h \
		cdada/ext_libs/etl/constant.h \
		cdada/ext_libs/etl/crc32_q.h \
		cdada/ext_libs/etl/scaled_rounding.h \
		cdada/ext_libs/etl/endianness.h \
		cdada/ext_libs/etl/mean.h \
		cdada/ext_libs/etl/rescale.h \
		cdada/ext_libs/etl/reference_counted_message_pool.h \
		cdada/ext_libs/etl/crc32_d.h \
		cdada/ext_libs/etl/observer.h \
		cdada/ext_libs/etl/fnv_1.h \
		cdada/ext_libs/etl/cumulative_moving_average.h \
		cdada/ext_libs/etl/reference_flat_set.h \
		cdada/ext_libs/etl/math_constants.h \
		cdada/ext_libs/etl/intrusive_links.h \
		cdada/ext_libs/etl/crc.h \
		cdada/ext_libs/etl/functional.h \
		cdada/ext_libs/etl/queue_spsc_locked.h \
		cdada/ext_libs/etl/crc16_ccitt.h \
		cdada/ext_libs/etl/stack.h \
		cdada/ext_libs/etl/basic_format_spec.h \
		cdada/ext_libs/etl/u32string.h \
		cdada/ext_libs/etl/type_select.h \
		cdada/ext_libs/etl/largest.h \
		cdada/ext_libs/etl/flat_multimap.h \
		cdada/ext_libs/etl/crc32_c.h \
		cdada/ext_libs/etl/variant_pool.h \
		cdada/ext_libs/etl/utility.h \
		cdada/ext_libs/etl/crc16_usb.h \
		cdada/ext_libs/etl/basic_string.h \
		cdada/ext_libs/etl/reference_flat_multiset.h \
		cdada/ext_libs/etl/cyclic_value.h \
		cdada/ext_libs/etl/pearson.h \
		cdada/ext_libs/etl/crc8_ebu.h \
		cdada/ext_libs/etl/exception.h \
		cdada/ext_libs/etl/reference_flat_multimap.h \
		cdada/ext_libs/etl/mutex/mutex_freertos.h \
		cdada/ext_libs/etl/mutex/mutex_std.h \
		cdada/ext_libs/etl/mutex/mutex_clang_sync.h \
		cdada/ext_libs/etl/mutex/mutex_gcc_sync.h \
		cdada/ext_libs/etl/mutex/mutex_arm.h \
		cdada/ext_libs/etl/message_router.h \
		cdada/ext_libs/etl/crc32_bzip2.h \
		cdada/ext_libs/etl/invert.h \
		cdada/ext_libs/etl/absolute.h \
		cdada/ext_libs/etl/function.h \
		cdada/ext_libs/etl/crc16_dnp.h \
		cdada/ext_libs/etl/alignment.h \
		cdada/ext_libs/etl/negative.h \
		cdada/ext_libs/etl/crc16_cdma2000.h \
		cdada/ext_libs/etl/unordered_multiset.h \
		cdada/ext_libs/etl/crc16_x25.h \
		cdada/ext_libs/etl/crc8_ccitt.h \
		cdada/ext_libs/etl/crc8_darc.h \
		cdada/ext_libs/etl/variant.h \
		cdada/ext_libs/etl/type_def.h \
		cdada/ext_libs/etl/u32string_stream.h \
		cdada/ext_libs/etl/nullptr.h \
		cdada/ext_libs/etl/memory_model.h \
		cdada/ext_libs/etl/macros.h \
		cdada/ext_libs/etl/private/minmax_pop.h \
		cdada/ext_libs/etl/private/ivectorpointer.h \
		cdada/ext_libs/etl/private/crc_implementation.h \
		cdada/ext_libs/etl/private/to_string_helper.h \
		cdada/ext_libs/etl/private/pvoidvector.h \
		cdada/ext_libs/etl/private/choose_namespace.h \
		cdada/ext_libs/etl/private/minmax_push.h \
		cdada/ext_libs/etl/private/crc_parameters.h \
		cdada/ext_libs/etl/private/vector_base.h \
		cdada/ext_libs/etl/crc16.h \
		cdada/ext_libs/etl/type_lookup.h \
		cdada/ext_libs/etl/crc16_riello.h \
		cdada/ext_libs/etl/generators/type_select_generator.h \
		cdada/ext_libs/etl/generators/type_lookup_generator.h \
		cdada/ext_libs/etl/generators/variant_pool_generator.h \
		cdada/ext_libs/etl/generators/smallest_generator.h \
		cdada/ext_libs/etl/generators/message_router_generator.h \
		cdada/ext_libs/etl/generators/largest_generator.h \
		cdada/ext_libs/etl/generators/message_packet_generator.h \
		cdada/ext_libs/etl/generators/fsm_generator.h \
		cdada/ext_libs/etl/generators/type_traits_generator.h \
		cdada/ext_libs/etl/null_type.h \
		cdada/ext_libs/etl/forward_list.h \
		cdada/ext_libs/etl/sqrt.h \
		cdada/ext_libs/etl/format_spec.h \
		cdada/ext_libs/etl/packet.h \
		cdada/ext_libs/etl/visitor.h \
		cdada/ext_libs/etl/static_assert.h \
		cdada/ext_libs/etl/experimental/crc16_modbus.h \
		cdada/ext_libs/etl/experimental/crc8_rohc.h \
		cdada/ext_libs/etl/experimental/variant_new.h \
		cdada/ext_libs/etl/experimental/crc16_xmodem.h \
		cdada/ext_libs/etl/experimental/crc32_posix.h \
		cdada/ext_libs/etl/experimental/crc32_mpeg2.h \
		cdada/ext_libs/etl/experimental/crc32.h \
		cdada/ext_libs/etl/experimental/crc16_kermit.h \
		cdada/ext_libs/etl/experimental/crc16_genibus.h \
		cdada/ext_libs/etl/experimental/crc16_ccitt.h \
		cdada/ext_libs/etl/experimental/crc32_c.h \
		cdada/ext_libs/etl/experimental/crc16_usb.h \
		cdada/ext_libs/etl/experimental/crc32_bzip2.h \
		cdada/ext_libs/etl/experimental/crc16_x25.h \
		cdada/ext_libs/etl/experimental/crc8_ccitt.h \
		cdada/ext_libs/etl/experimental/crc16.h \
		cdada/ext_libs/etl/experimental/icache.h \
		cdada/ext_libs/etl/experimental/crc64_ecma.h \
		cdada/ext_libs/etl/multi_array.h \
		cdada/ext_libs/etl/hash.h \
		cdada/ext_libs/etl/memory.h \
		cdada/ext_libs/etl/string_stream.h \
		cdada/ext_libs/etl/optional.h \
		cdada/ext_libs/etl/error_handler.h \
		cdada/ext_libs/etl/crc16_arc.h \
		cdada/ext_libs/etl/bit_stream.h \
		cdada/ext_libs/etl/permutations.h \
		cdada/ext_libs/etl/fibonacci.h \
		cdada/ext_libs/etl/to_u32string.h \
		cdada/ext_libs/etl/bresenham_line.h \
		cdada/ext_libs/etl/bloom_filter.h \
		cdada/ext_libs/etl/crc16_a.h \
		cdada/ext_libs/etl/crc8_cdma2000.h \
		cdada/ext_libs/etl/fixed_sized_memory_block_allocator.h \
		cdada/ext_libs/etl/multimap.h \
		cdada/ext_libs/etl/checksum.h \
		cdada/ext_libs/etl/array_wrapper.h \
		cdada/ext_libs/etl/unordered_set.h \
		cdada/ext_libs/etl/message_router_registry.h \
		cdada/ext_libs/etl/rms.h \
		cdada/ext_libs/etl/delegate.h \
		cdada/ext_libs/etl/threshold.h \
		cdada/ext_libs/etl/crc64_ecma.h \
		cdada/ext_libs/etl/wstring.h \
		cdada/ext_libs/etl/crc32_jamcrc.h \
		cdada/ext_libs/etl/bitset.h \
		cdada/ext_libs/etl/crc16_mcrf4xx.h \
		cdada/ext_libs/etl/u32format_spec.h \
		cdada/ext_libs/etl/power.h \
		cdada/ext_libs/etl/parameter_pack.h \
		cdada/ext_libs/etl/multi_range.h \
		cdada/ext_libs/etl/atomic.h \
		cdada/ext_libs/etl/message_packet.h \
		cdada/ext_libs/etl/standard_deviation.h \
		cdada/ext_libs/etl/quantize.h \
		cdada/ext_libs/etl/frame_check_sequence.h \
		cdada/ext_libs/etl/intrusive_list.h \
		cdada/ext_libs/etl/message_bus.h \
		cdada/ext_libs/etl/indirect_vector.h \
		cdada/ext_libs/etl/delegate_service.h \
		cdada/ext_libs/etl/flat_set.h \
		cdada/ext_libs/etl/array.h \
		cdada/ext_libs/etl/deprecated/factory.h \
		cdada/ext_libs/etl/factorial.h \
		cdada/ext_libs/etl/intrusive_stack.h \
		cdada/ext_libs/etl/io_port.h \
		cdada/ext_libs/etl/reference_counted_object.h \
		cdada/ext_libs/etl/generic_pool.h \
		cdada/ext_libs/etl/crc32_xfer.h
